中華民國刑法 2001.6.1

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -470,13 +470,21 @@
 
 * 201 意圖供行使之用，而偽造、變造公債票、公司股票或其他有價證券者，處三年以上、十年以下有期徒刑，得併科三千元以下罰金。行使偽造、變造之公債票、公司股票或其他有價證券，或意圖供行使之用而收集或交付於人者，處一年以上、七年以下有期徒刑，得併科三千元以下罰金。
 
+* 201.1 意圖供行使之用，而偽造、變造信用卡、金融卡、儲值卡或其他相類作為簽帳、提款、轉帳或支付工具之電磁紀錄物者，處一年以上七年以下有期徒刑，得併科三萬元以下罰金。行使前項偽造、變造之信用卡、金融卡、儲值卡或其他相類作為簽帳、提款、轉帳或支付工具之電磁紀錄物，或意圖供行使之用，而收受或交付於人者，處五年以下有期徒刑，得併科三萬元以下罰金。
+
+> 釋：一、本條新增。二、考量近年偽造、變造金融卡、信用卡之犯罪行為層出不窮，查獲之案件多為企業化、多角化及跨國性集團之犯罪，已嚴重危害社會經濟秩序，與行使偽卡之詐欺行為相較，實有過之而無不及，故以高於詐欺罪之法定刑處罰。
+
 * 202 意圖供行使之用，而偽造、變造郵票或印花稅票者，處六月以上、五年以下有期徒刑，得併科一千元以下罰金。行使偽造、變造之郵票或印花稅票或意圖供行使之用而收集或交付於人者，處三年以下有期徒刑，得併科一千元以下罰金。意圖供行使之用，而塗抹郵票或印花稅票上之註銷符號者，處一年以下有期徒刑，拘役或三百元以下罰金；其行使之者亦同。
 
 * 203 意圖供行使之用，而偽造、變造船票、火車、電車票或其他往來客票者，處一年以下有期徒刑、拘役或三百元以下罰金；其行使之者亦同。
 
-* 204 意圖供偽造、變造有價證券、郵票或印花稅票之用，而製造、交付或收受各項器械、原料者，處二年以下有期徒刑，得併科五百元以下罰金。
+* 204 意圖供偽造、變造有價證券、郵票、印花稅票、信用卡、金融卡、儲值卡或其他相類作為簽帳、提款、轉帳或支付工具之電磁紀錄物之用，而製造、交付或收受各項器械、原料、或電磁紀錄者，處二年以下有期徒刑，得併科五千元以下罰金。從事業務之人利用職務上機會犯前項之罪者，加重其刑至二分之一。
 
-* 205 偽造、變造之有價證券、郵票或印花稅票及前條之器械、原料，不問屬於犯人與否，沒收之。
+> 釋：一、配合第二百零一條之一增訂，修正本條有關預備偽造、變造有價證券之範圍，以期週延。二、本條第一項之罰金刑偏低，爰酌予提高為五千元。三、從事業務之人，因職務關係，如有不當利用器械、原料及電磁紀錄，將造成被害人莫大損失，為徹底遏止信用卡之犯罪，對從事業務之人，利用職務上之機會，犯第一項之罪，有加重處罰之必要，爰增列第二項。
+
+* 205 偽造、變造之有價證券、郵票、印花稅票、信用卡、金融卡、儲值卡或其他相類作為提款、簽帳、轉帳或支付工具之電磁紀錄物及前條之器械原料及電磁紀錄，不問屬於犯人與否，沒收之。
+
+> 釋：由於偽造、變造之信用卡、金融卡、儲值卡或其他相類之電磁紀錄物及製作之器械、原料及電磁紀錄本身即為犯罪之工具，並無合法之用途，故有專科沒收規定之必要，以杜絕上開物品再次被利用為犯罪之工具。
 
 * 206 意圖供行使之用，而製造違背定程之度量衡，或變更度量衡之定程者，處一年以下有期徒刑、拘役或三百元以下罰金。
 
