行政程序法 2001.6.5

--- a/行政-內政/行政程序法.md
+++ b/行政-內政/行政程序法.md
@@ -694,9 +694,9 @@
 
 > 釋：照審查條文通過。
 
-* 174.1 本法施行前，行政機關依中央法規標準法第七條訂定之命令，須以法律規定或以法律明列其授權依據者，應於本法施行後二年內，以法律規定或以法律明列其授權依據後修正或訂定；逾期失效。
+* 174.1 本法施行前，行政機關依中央法規標準法第七條訂定之命令，須以法律規定或以法律明列其授權依據者，應於本法施行後一年內，以法律明列其授權依據後修正或訂定；逾期失效。
 
-> 釋：本法自九十年一月一日開始施行，本條規定之「施行後一年」即將於九十年十二月底屆滿，各機關為配合本法施行，而修正以符合法律保留原則或增列法律明確授權之法律案，恐難於期限內完成立法程序，為使行政事務賡續順利進行，爰將「一年」之緩衝期間修正為「二年」，以應實際需要。
+> 釋：鑑於民國八十八年二月三日立法院通過「行政程序法」時，業已給予行政院二年時間，以作為相關法制調整肆應之緩衝期，惟行政院不但未於期限屆滿前完成準備工作，復於該法於民國九十年一月一日正式施行前一個月，未經正常審議程序，協商通過增訂「行政程序法第一百七十四條之一」之條文，已嚴重違反行政程序法之立法精神及背離人民對該法之信賴，故刪除第二項規定。
 
 * 175 本法自中華民國九十年一月一日施行。
 
