--- a/行政-經濟及能源/專利法.md
+++ b/行政-經濟及能源/專利法.md
@@ -22,21 +22,37 @@
 
 * 12 申請人申請專利及辦理有關專利事項，得委任專利代理人辦理之。在中華民國境內，無住所或營業所者，申請專利及辦理專利有關事項，應委任專利代理人辦理之。專利代理人，應在中華民國境內有住所。其為專業者，除法律另有規定外，以專利師為限。專利師之資格及管理，另以法律定之；法律未制定前，依專利代理人規則辦理。
 
-* 13 二人以上共同申請專利、提起異議或舉發，或為專利權之共有者，除約定有代表者外，辦理一切程序時，應共同連署，並指定其中一人為應受送達人。未指定應受送達人者，專利專責機關除以第一順序申請人、異議人或舉發人為應受送達人外，並應將送達事項通知其他人。
+* 13 專利申請權為共有者，應由全體共有人提出申請。二人以上共同為專利申請以外之專利相關程序時，除撤回或拋棄申請案、第三十二條之各別申請、第六十八條之申請分割、改請或本法另有規定者，應共同連署外，其餘程序各人皆可單獨為之。但約定有代表者，從其約定。前二項應共同連署之情形，應指定其中一人為應受送達人。未指定應受送達人者，專利專責機關應以第一順序申請人為應受送達人，並應將送達事項通知其他人。
+
+> 釋：一、修正第一項。按共有專利申請權者提出申請時，應由全體共有人連署為之，至於專利權為共有者，其相關程序之處理，第六十一條、第六十二條，已有明文，爰予刪除。二、增訂第二項。三、增訂第三項。將現行條文後段規定應受送達人之情形移列至修正條文第三項，統一規範前二項申請之送達。
 
 * 14 專利申請權為共有時，各共有人未得其他共有人之同意，不得以其應有部分讓與他人。
 
 * 15 繼受專利申請權者，如在申請時非以繼受人名義申請專利，或未在申請後向專利專責機關申請變更名義者，不得以之對抗第三人。為前項之變更申請者，不論受讓或繼承，均應附具證明文件。
 
-* 16 專利專責機關職員及專利審查委員於任職期內，除繼承外，不得申請專利及直接、間接受有關專利之任何權益。
+* 16 專利專責機關職員及專利審查人員於任職期內，除繼承外，不得申請專利及直接、間接受有關專利之任何權益。
 
-* 17 專利專責機關職員及專利審查委員對職務上知悉或持有關於專利之發明、新型或新式樣，或申請人事業上之秘密，有保密之義務。
+> 釋：按現行條文所稱審查委員，依」專利審查官資格條例」第二條規定，得從事專利審查官工作者，為專利高級審查官、專利審查官及專利助理審查官。另依「經濟部智慧財產局組條例」第十六條之一規定，聘用之專業人員，亦得擔任專利之審查官工作，第十七條規定，組織條例修正生效後五年內尚遴聘之兼任審查人員，亦得擔任專利審查工作，基於避免角色衝突及公務保密之考量，並乃於審查相關人員，爰將「專利審查委員」修正為「專利審查人員」。
+
+* 17 專利專責機關職員及專利審查人員對職務上知悉或持有關於專利之發明、新型或新式樣，或申請人事業上之秘密，有保密之義務。
+
+> 釋：按現行條文所稱審查委員，依」專利審查官資格條例」第二條規定，得從事專利審查官工作者，為專利高級審查官、專利審查官及專利助理審查官。另依「經濟部智慧財產局組條例」第十六條之一規定，聘用之專業人員，亦得擔任專利之審查官工作，第十七條規定，組織條例修正生效後五年內尚遴聘之兼任審查人員，亦得擔任專利審查工作，基於避免角色衝突及公務保密之考量，並乃於審查相關人員，爰將「專利審查委員」修正為「專利審查人員」。
 
 * 18 凡申請人為有關專利之申請及其他程序，延誤法定或指定之期間或不依限納費者，應不受理。但延誤指定期間或不依限納費在處分前補正者，仍應受理。申請人因天災或不可歸責於己之事由延誤法定期間者，於其原因消滅後三十日內得以書面敘明理由向專利專責機關申請回復原狀。但延誤法定期間已逾一年者，不在此限。申請回復原狀應同時補行期間內應為之行為。前二項規定，於異議不適用之。
 
+* 18.1 審定書或其他文件無從送達者，應於專利公報公告之，自刊登公報之日起滿三十日，視為已送達。
+
+> 釋：一、本條新增。二、查專利之申請常含涉外因素，故現行條文第十二條規定，在我國境內無住所或營業所者，應委任代理人，辦理專利有關事項，送達亦對其為之，並無行政程序法第七十八條第一項第三款之情形，因公示送達原因不同，爰於本條明定。
+
 * 19 稱發明者，謂利用自然法則之技術思想之高度創作。
 
-* 20 凡可供產業上利用之發明，無下列情事之一者，得依本法申請取得發明專利：一、申請前已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、有相同之發明或新型申請在先並經核准專利者。三、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。發明係運用申請前既有之技術或知識，而為熟習該項技術者所能輕易完成時，雖無前項所列情事，仍不得依本法申請取得發明專利。
+* 20 凡可供產業上利用之發明，無下列情事之一者，得依本法申請取得發明專利：一、申請前已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。發明係運用申請前既有之技術或知識，而為熟習該項技術者所能輕易完成時，雖無前項所列情事，仍不得依本法申請取得發明專利。申請人主張第一項第一款但書或第二款但書之情事者，應於申請時敘明事實及其年、月、日，並應於專利專責機關指定期間內檢附證明文件。
+
+> 釋：一、第一項係有關專利要件中新穎性喪失之規定，而現行條文第一項第二款係屬先申請案之地位之規定，須詳予規範，爰修正後移列第二十條之一。現行條文第一項第三款移列第二款。二、增訂第三項。涉及新穎性有無之判斷，直接影響專利申請案之准駁，申請人有必要於申請時即予敘明，因涉及人民之權利、義務，依中央法規標準法第五條第二款規定，應以法律定之，爰予明定。
+
+* 20.1 申請專利之發明，與申請在先而在其申請後始公開或公告之發明或新型專利申請案所附說明書或圖式載明之內容相同者，不得取得發明專利。但其申請人與申請在先之發明或新型專利申請案之申請人相同者，不在此限。
+
+> 釋：一、本條新增。二、本條規定先申請案之地位，係由現行條文第二十條第一項第二款修正後移列。三、就後案申請前，已有他人申請在先尚未公開之相關專利內容，為貫徹先申請主義之精神，乃擬制其屬新穎性審查範圍，明定後申請案不可申請取得發明專利。
 
 * 21 下列各款不予發明專利：一、動、植物新品種。但植物新品種育成方法不在此限。二、人體或動物疾病之診斷、治療或手術方法。三、科學原理或數學方法。四、遊戲及運動之規則或方法。五、其他必須藉助於人類推理力、記憶力始能執行之方法或計畫。六、發明妨害公共秩序、善良風俗或衛生者。
 
@@ -44,17 +60,33 @@
 
 * 22 申請發明專利，申專利申請權人備具申請書、說明書、必要圖式及宣誓書，向專利專責機關申請之。申請權人為雇用人、受讓人或繼承人時，應敘明發明人姓名，並附具僱傭、受讓或繼承證明文件。第一項之說明書，除應載明申請專利範圍外，並應載明有關之先前技術、發明之目的、技術內容、特點及功效，使熟習該項技術者能瞭解其內容並可據以實施。前項申請專利範圍，應具體指明申請專利之標的、技術內容及特點。說明書、圖式及申請專利範圍之敘述方式，於施行細則定之。
 
-* 23 申請發明專利以規費繳納及前條所規定之文件齊備之日為申請日。其說明書、圖式、宣誓書以外文本提出者，應於專利專責機關指定期間內補正中文本；在處分前補正者，以補正之日為文件齊備日。
+* 23 申請發明專利以規費繳納及前條第一項所規定申請書、說明書及必要圖式齊備之日為申請日。其說明書、圖式以外文本提出者，應於專利專責機關指定期間內補正中文本；在處分前補正者，以補正之日為文件齊備日。
 
-* 24 申請人就相同發明在與中華民國相互承認優先權之外國第一次依法申請專利，並於第一次提出申請專利之次日起十二個月內，向中華民國提出申請專利者，得享有優先權。依前項規定，申請人於一申請案中主張兩項以上優先權時，其優先權期間自最早之優先權日之次日起算。申請人為外國人者，以其所屬之國家承認中華民國國民優先權者為限。主張優先權者，其專利要件之審查，以優先權日為準。
+> 釋：按宣誓書係申請人切結並無抄襲、剽竊之情事；惟實務上常因受僱人死亡、離職或行蹤不明等原因，致宣誓書、申請權證明文件取得困難，影響申請案之申請日，爰予修正之。以使宣誓書及申請權證明文件屬得補正之文件，而不列為取得申請日之必要文件，予以鬆綁。
 
-* 25 依前條規定主張優先權者，應於申請專利同時提出聲明，並於申請書中載明在外國之申請日、申請案號數及受理該申請之國家。申請人應於申請之日起三個月內檢送經該國政府證明受理之申請文件；未於申請時提出聲明或逾期未檢送者，喪失優先權。
+* 24 申請人就相同發明在與中華民國相互承認優先權之外國第一次依法申請專利，並於第一次申請專利之次日起十二個月內，向中華民國申請專利者，得享有優先權。依前項規定，申請人於一申請案中主張兩項以上優先權時，其優先權期間自最早之優先權日之次日起算。外國申請人其所屬國家與我國無相互承認優先權者，若於互惠國領域內，設有住所或營業所者，亦得依第一項規定主張優先權。主張優先權者，其專利要件之審查，以優先權日為準。依本條主張之優先權日，不得早於中華民國八十三年一月二十三日。
 
-* 26 申請有關微生物之發明專利，申請人應於申請前將該微生物寄存於專利專責機關指定之國內寄存機構，並於申請時附具寄存機構之寄存證明文件。但該微生物為熟習該項技術者易於獲得時，不須寄存。
+> 釋：一、第一項酌作文字修正，刪除「提出」二字。二、我國於加入世界貿易組織後，對於無國籍人及非我國互惠國之國民，若於互惠國中有住所、居所者，仍應給予準國民待遇，故將現行條文第三項修正之。三、第五項由現行條文第一百三十六條移列，該條係於八十三年一月二十一日修正（一月二十三日生效）時增訂，因實務上可能仍有未審結之舊案，為免混淆，爰將「本法公布施行日」等字修正為「中華民國八十三年一月二十三日」。
 
-* 27 二人以上有同一之發明，各別申請時，應就最先申請者准予發明專利。但後申請者所主張之優先權日早於先申請者之申請日時，不在此限。前項申請日、優先權日為同日，應通知申請人協議定之，協議不成時，均不予發明專利。
+* 25 依前條規定主張優先權者，應於申請專利同時提出聲明，並於申請書中載明在外國之申請日、申請案號數及受理該申請之國家。但不能知悉申請案號數者，應於申請書載明理由。申請人應於申請之次日起三個月內檢送經該國政府證明受理之申請文件；其有前項但書之情形者，並應同時附具證明為同一案件之文件。違反前二項之規定者，喪失優先權。
 
-* 28 專利申請權人或專利權人有再發明時，得申請追加專利。但其期間至原專利權期間屆滿時為止。前項之再發明，係指利用原發明之主要技術內容所完成之發明。
+> 釋：一、增訂第一項但書。為落實法規鬆綁，爰規定為得補正事項，以緩和前述主張複數優先權時，最後一項主張無法取得優先權之缺憾。二、將現行條文中段修正後移列第二項，明定主張優先權及有前項但書之情形者，應補正之期間及應檢送之文件。三、增訂第三項。明定違反第一項、第二項之效果。
+
+* 25.1 申請人基於其在中華民國先申請之發明或新型專利案再提出專利之申請者，得就先申請案申請時說明書或圖式所載之發明或創作，主張優先權。但有下列情事之一者，不得主張之：一、自先申請案申請之次日起已逾十二個月者。二、先申請案中所記載之發明或創作已經依第二十四條或本條規定主張優先權者。三、先申請案係依第三十二條第一項規定改為各別申請案或依第一百零一條規定改請者。四、先申請案已經審定者。前項先申請案自其申請之次日起滿十五個月，視為撤回。先申請案申請之次日起十五個月後，不得撤回優先權主張。依第一項主張優先權之後申請案，於先申請案申請之次日起十五個月內撤回者，視為同時撤回優先權之主張。申請人於一申請案中主張二項以上優先權時，其優先權期間，自最早之優先權日之次日起算。主張優先權者，其專利要件之審查，以優先權日為準。依第一項主張優先權者，應於申請專利同時提出聲明，並於申請書中載明先申請案之申請日及申請案號數，申請人未於申請時提出聲明，或未載明先申請案之申請日及申請案號數者，喪失優先權。依本條主張之優先權日，不得早於本法中華民國九十年十月四日修正施行之日。
+
+> 釋：一、本條新增。二、導入國內優先權制度。申請人提出專利申請後，在相當期間內加以補充改良，再行申請時，可主張優先權，而以先申請案之申請日作為審查專利要件之基準日。
+
+* 26 申請有關微生物新品種或利用微生物之發明專利，申請人應於申請前將該微生物寄存於專利專責機關指定之國內寄存機構，並於申請書上載明寄存機構、寄存日期及寄存號碼。但該微生物為熟習該項技術者易於獲得時，不須寄存。申請人應於申請之次日起三個月內檢送寄存證明文件，逾期未檢送者，視為未寄存。申請前如已於專利專責機關認可之國外寄存機構寄存，而於申請時聲明其事實，並於前項規定之期限內，檢送寄存於專利專責機關指定之國內寄存機構之證明文件及國外寄存機構出具之證明文件者，不受第一項應於申請前在國內寄存之限制。第一項微生物寄存之受理要件、種類、型式、數量、收費費率及其他寄存執行之辦法，由專利專責機關定之。
+
+> 釋：一、為求明確，俾免適用時發生疑義，爰修正第一項。二、增訂第二項。明定補提寄存證明文件之期間；逾期未檢送者，視為未寄存。三、增訂第三項。因目前規定，不利於申請人及時申請前寄存，為緩和此一情況，爰明定已於申請前在國外寄存者，於第二項規定之法定期間內完成國內寄存，並檢送該機構出具之證明文件及國外寄存機構出具之證明文件，即可不受第一項應於申請前在國內寄存之限制。四、增訂第四項。有關微生物之寄存，有一定之要件、程序及方式，並須收取費用，由專利專機關訂定之。
+
+* 27 同一發明有二以上之專利申請案時，僅得就其最先申請者准予發明專利。但後申請者所主張之優先權日早於先申請者之申請日時，不在此限。前項申請日、優先權日為同日，應通知申請人協議定之，協議不成時，均不予發明專利。各申請人為協議時，專利專責機關應指定相當期間通知申請人申報協議結果，逾期未申報者，視為協議不成。同一發明或創作分別申請發明專利及新型專利者，準用前三項規定。
+
+> 釋：一、按一發明一專利為專利法之基本原則，實務上或有申請人一案二申請。爰將現行條文第一項前段「二人以上有同一之發明，各別申請時」修正為「同一發明有二以上之專利申請案時」。二、第二項未修正。三、增訂第三項。因擬制為協議不成之效果，影響人民之權利，爰將施行細則第二十條之規定，修正後移列。四、增訂第四項。因實務上一案二申請可能為二發明案、二新型案或一發明案一新型案。爰明定準用前三項之規定。
+
+* 28 （刪除）
+
+> 釋：一、本條刪除。二、對發明人而言，追加專利制度之裨益不大，且兩制併行，作業繁雜，易生混，淆爰配合國內優先權之導入，並參酌日本等國專利法規定，將追加專利相關之條文予以刪除。
 
 * 29 利用他人之發明或新型再發明者，得申請發明專利。前項之再發明，係指利用他人發明或新型之主要技術內容所完成之發明。
 
@@ -64,17 +96,49 @@
 
 * 32 申請專利之發明，實質上為兩個以上之發明時，經專利專責機關通知，或據申請人申請，得改為各別申請。前項各別申請應於原申請案再審查審定前為之。如准予各別申請，仍以最初申請之日為申請日，如有優先權者，仍得主張優先權，並應就原申請案已完成之程序續行審查。
 
-* 33 追加發明專利之申請改為獨立發明專利之申請，或獨立發明專利之申請改為追加發明專利之申請，準用前條第二項規定辦理。
+* 33 （刪除）
+
+> 釋：一、本條刪除。二、本條追加專利之相條文，因現行條文第二十八條追加專利制度之規定已刪除，本條配合刪除。
 
 * 34 發明為非專利申請權人所申請，經依異議不予專利時，專利申請權人於異議確定之次日起六十日內申請者，以非專利申請權人申請之日為專利申請權人申請之日。
 
 * 35 發明為非專利申請權人請准專利，經專利申請權人於該專利案審查確定後二年內申請舉發，並於舉發撤銷確定之次日起六十日內申請者，以非專利申請權人申請之日為專利申請權人申請之日。
 
-* 36 專利專責機關對於發明專利申請案之實體審查，應指定審查委員審查之。審查委員之資格，以法律定之。前項法律應於本法施行後二年內公布施行。
+* 36 專利專責機關對於發明專利申請案之實體審查，應指定專利審查人員審查之。專利審查人員之資格，以法律定之。
 
-* 37 審查委員有下列情事之一者，應迴避：一、審查委員之配偶，前配偶或未婚配偶，為該專利案申請人、代理人、代理人之合夥人或與代理人有僱傭關係者。二、審查委員為該專利案申請人或代理人之五親等內血親，或三親等內姻親，或曾有此親屬關係者。三、審查委員之配偶，前配偶，或未婚配偶，就該專利案與申請人有共同權利人、共同義務人、或償還義務人之關係者。四、審查委員現為或曾為該專利案申請人之法定代理人或家長家屬者。五、審查委員現為或曾為該專利案申請人之訴訟代理人或輔佐人者。六、審查委員現為或曾為該專利案之證人、鑑定人、異議人或舉發人者。審查委員有應迴避而不迴避之情事者，專利專責機關得依職權或依申請撤銷其所為之處分後，另為適當之處分。
+> 釋：一、第一項及第二項酌作文字修正。二、第三項刪除。「專利審查官資格條例」及「經濟部智慧財產局組織條例」修正案，刻業於立法院完成一讀程序，且二年時間已過，現行條文第三項規定已無實益，爰予刪除。
 
-* 38 申請案經審查後，應作成審定書送達申請人或其代理人。經審定不予專利者，審定書應備具理由。審定書應由審查委員具名。再審查、異議審查、舉發審查與專利權延長審查之審定書亦同。前項審查委員具名，應於本法施行後一年內實施。
+* 36.1 專利專責機關接到發明專利申請文件後，經審查認為無不合規定程式且無應不予公開之情事者，自申請之次日起十八個月後，應將該申請案公開之。前項期間，如有主張優先權者，自優先權日之次日起算；其主張二項以上優先權時，自最早之優先權日之次日起算。專利專責機關得因申請人之申請，提早公開其申請案。發明專利申請案有下列情事之一者，不予公開：一、自申請之次日起十五個月內撤回者。二、涉及國防機密或其他國家安全之機密者。三、妨害公共秩序或善良風俗者。
+
+> 釋：一、本條新增。二、第一項明定專利申請案公開之時期及已審定公告之申請案不再公開。第二項規定主張優先權之專利申請案其公開時期之起算點。第三項明定申請人得申請提早公開。第四項規定不予公開之對象。
+
+* 36.2 自發明專利申請之次日起三年內，任何人均得向專利專責機關申請實體審查。依第三十二條第一項規定，改為各別申請案，或依第一百零一條規定，改請為發明專利申請案，逾前項期間者，得於各別申請或改請之次日起三十日內，向專利專責機關申請實體審查。依前二項規定所為審查之申請，不得撤回。未於第一項或第二項規定之期間內申請實體審查者，該發明專利申請案視為撤回。
+
+> 釋：一、本條新增二、第一項明定任何人均得申請審查及申請之期限。第二項規定分割、改請案縱然超過第一項規定之三年期間，仍得於分割、改請之次日起三十日內申請審查。第三項為避免第三人重複申請審查及審查經濟之考量，乃明定審查之申請不得撤回。第四項則規定未於本條之期間內申請審查者，該發明專利申請案視為撤回。
+
+* 36.3 申請前條之審查者，應檢附申請書。專利專責機關應將申請審查之事實，刊載於專利公報。申請審查由發明專利申請人以外之人提起者，專利專責機關應將該項事實通知發明專利申請人。有關微生物新品種或利用微生物之發明專利申請人，申請審查時，應檢送寄存機構出具之存活證明；如發明專利申請人以外之人申請審查時，專利專責機關應通知發明專利申請人於三個月內檢送存活證明。
+
+> 釋：一、本條新增。二、第一項規定申請審查應檢附申請書，至申請書應記載之事項，則另於施行細則中規定之。三、第二項明定專利專責機關應將申請審查之事實，刊載於專利公報，以示周知。四、第三項規定發明專利申請人以外之人申請審查時，應將該項事實通知發明專利申請人，俾免重複申請。五、第四項規定有關微生物新品種或利用微生物之發明專利申請案，進入審查程序時，應檢送寄存機構出具之存活證明。
+
+* 36.4 發明專利申請案公開後審定公告前，如有非專利申請人為商業上之實施者，專利專責機關得依申請優先審查之。為前項申請者，應檢附有關證明文件。
+
+> 釋：一、本條新增。二、第一項規定申請優先審查之要件，蓋已公開之申請案有他人為商業上實施時，為使權利早日明確，乃明定專利專責機關得依申請優先審查之。三、第二項規定申請優先審查，應檢附證明文件。
+
+* 36.5 發明專利申請人對於申請案公開後，曾經以書面通知發明專利申請內容，而於通知後審定公告前就該發明仍繼續為商業上實施之人，得於發明專利申請案審查確定取得專利權後，請求適當之補償金。對於明知發明專利申請案已經公開，於審定公告前就該發明仍繼續為商業上實施之人，亦得為前項之請求。前二項規定之請求權，不影響其他權利之行使。第一項、第二項之補償金請求權，自審查確定之次日起，二年間不行使而消滅。
+
+> 釋：一、本條新增。二、本條係有關早期公開暫時保護之規定。申請案公開後，第三人即可知悉該發明技術，並為商業上之實施，故此時專利申請人尚未取得專利權，為填補專利申請人這段期間之損失，爰明定專利申請人於將來取得專利權後，對該第三人得請求適當之補償金，做為彌補。
+
+* 36.6 前五條規定，於本法中華民國九十年十月四日修正施行日起一年後提出之發明專利申請案，始適用之。
+
+> 釋：一、本條新增。二、「專利法」第三十六條之一至第三十六條之五為有關早期公開之規定，因早期公開係一新引進之制度，亟須宣導，並予申請人相當之調適期間，且相關之作業流程及規費等事項，專利專責機關亦須配合規劃，爰明定本法修正施行一年後所提出之發明專利申請案，始得適用。
+
+* 37 專利審查人員有下列情事之一者，應迴避：一、本人及其配偶、前配偶或未婚配偶，為該專利案申請人、代理人、代理人之合夥人或與代理人有僱傭關係者。二、現為該專利案申請人或代理人之四親等內血親，或三親等內姻親，或曾有此親屬關係者。三、本人及其配偶、前配偶或未婚配偶，就該專利案與申請人有共同權利人、共同義務人或償還義務人之關係者。四、現為或曾為該專利案申請人之法定代理人或家長家屬者。五、現為或曾為該專利案申請人之訴訟代理人或輔佐人者。六、現為或曾為該專利案之證人、鑑定人、異議人或舉發人者。專利審查人員有應迴避而不迴避之情事者，專利專責機關得依職權或依申請撤銷其所為之處分後，另為適當之處分。
+
+> 釋：一、將本條各項「審查委員」之文字修正為「專利審查人員」。二、配合行政程序法第三十二條有關公務員自行迴避之規定，將第一項第一款及第三款增列專利審查人員本人；將第二款之「五親等內血親」修正為「四等親內血親」，以免過嚴。
+
+* 38 申請案經審查後，應作成審定書送達申請人或其代理人。經審定不予專利者，審定書應備具理由。審定書應由專利審查人員具名。再審查、異議審查、舉發審查及專利權延長審查之審定書，亦同。
+
+> 釋：一、第三項酌作文字修正。二、第四項為八十三年一月二十一日修正時所增訂，今專利審查人員均已於審定書具名，爰予刪除。
 
 * 39 發明經審查認為無不予專利之理由時，應予專利，並應將申請專利範圍及圖式公告之。經審定公告之專利案，任何人均得申請閱覽、抄錄、攝影或影印其審定書、說明書、圖式、宣誓書及全部檔案資料。但專利專責機關依法應予保密者，不在此限。
 
@@ -84,15 +148,25 @@
 
 * 42 專利專責機關接到異議書後，應將異議書副本送達申請人或其代理人。申請人應於副本送達之次日起一個月內答辯，除先行申明理由，准予展期者外，逾期不答辯者，逕予審查。
 
-* 43 再審查或異議審查時，專利專責機關應指定未曾審查原案之審查委員審查，並作成審定書。前項再審查之審定書應送達申請人。異議審查之審定書應送達申請人及異議人。
+* 43 再審查或異議審查時，專利專責機關應指定未曾審查原案之專利審查人員審查，並作成審定書。前項再審查之審定書應送達申請人。異議審查之審定書應送達申請人及異議人。
+
+> 釋：第一項酌作文字修正。將「專利審查委員」修正為「專利審查人員」。
 
 * 43.1 混合兩種以上醫藥品而製造之醫藥品或方法，其專利權效力不及於醫師之處方或依處方調劑之醫藥品。
 
 > 釋：一、本條新增。二、第四條修正開放「醫藥品」專利後，因醫藥品之專利如屬兩種以上之醫藥品混合製造而具有新藥效之醫藥品，就該醫藥品本身及製造方法均可給予專利，惟該專利權之效力，如及於醫生之處方及依處方調劑之醫藥品時，將妨害醫療行為。爰參照日本、芬蘭立法例增訂本條。
 
-* 44 專利專責機關於審查時，得依職權或依申請限期通知申請人或異議人為下列各款之行為：一、到局面詢。二、為必要之實驗、補送模型或樣品。三、補充或修正說明書或圖式。前項第二款之實驗或補送模型或樣品，專利專責機關必要時得至現場或指定地點實施勘察。因第一項第二款及前項所衍生之費用，由應負舉證責任之當事人負擔之。依第一項第三款所為之補充或修正，除不得變更申請案之實質外，如其補充或修正係在發明專利案審定公告之後提出者，並須有下列各款情事之一始得為之：一、申請專利範圍過廣。二、誤記之事項。三、不明瞭之記載。
+* 44 專利專責機關於審查發明專利時，得依職權或依申請通知申請人或異議人限期為下列各款之行為：一、至專利專責機關面詢。二、為必要之實驗、補送模型或樣品。前項第二款之實驗或補送模型或樣品，專利專責機關必要時得至現場或指定地點實施勘驗。
 
-* 45 審定公告之發明專利案，專利專責機關認有依職權審查之必要者，應通知申請人限期一個月內答辯，逾期不答辯者，逕予審查。專利專責機關得依前項職權審查之結果，通知申請人修正其說明書及圖式。但其修正應符合前條第四項之規定。
+> 釋：一、因本次專利法修正導入早期公開制度，故本條有關補充、修正說明書或圖式之時點，宜重新規範檢討，另列專條，爰將現行條文第一項第三款及第四項移列於修正條文第四十四條之一，以專條規定。二、第二項文字修正。配合行政程序法第四十二條將「勘察」修正為「戡驗」。三、現行條文第三項刪除。因行政程序法第五十二條已有明文規定，爰予刪除。
+
+* 44.1 專利專責機關得依職權通知申請人限期補充、修正說明書或圖式。申請人得於發明專利申請之次日起十五個月內，補充、修正說明書或圖式。申請人於發明專利申請之次日起十五個月後，僅得於下列各款之期日或期間內補充、修正說明書或圖式：一、申請實體審查之同時。二、申請人以外之人申請實體審查者，於申請案進行實體審查通知送達之次日起三個月內。三、專利專責機關核駁理由先行通知申復之期間內。四、申請再審查之同時，或得補提再審查理由書之期間內。五、異議答辯期間內。六、專利專責機關依職權審查通知答辯之期間內。依前三項所為之補充、修正，不得變更申請案之實質。於審定公告後提出之補充、修正，並須有下列各款情事之一始得為之：一、申請專利範圍過廣。二、誤記之事項。三、不明瞭之記載。第二項之期間，如有依第二十四條規定主張優先權者，自優先權日之次日起算。
+
+> 釋：一、本條新增。二、因本次修正導入早期公開制，爰將現行條文第四十四條第一項第三款及第四項等補充、修正之規定，移列本條統一規範。
+
+* 45 審定公告之發明專利案，專利專責機關認有依職權審查之必要者，應通知申請人限期一個月內答辯，逾期不答辯者，逕予審查。經審查認應撤銷原審定者，應作成處分書，送達申請人或其代理人。前項處分書，應由專利審查人員具名。
+
+> 釋：一、修正第一項明定專利專責機關依職權審查後，如認有應撤銷原審定之情事者，應以處分書作成行政處分，送達申請人或其代理人，以茲明確。二、現行條文第二項刪除。因該項規定已納入修正條文第四十四條之一，至於新式樣專利依修正條文第一百二十二條規定亦準用本條，而依職權審查之補充、修正，業於修正條文第一百十六條明定，爰將本項規定刪除。三、增訂第二項。依職權審查所作成撤銷原審定之處分書，其效力與審定書相當，故亦須由審查人員具名，爰予明定。
 
 * 46 對於再審查、異議或舉發之審定有不服時，得於審定書送達之次日起三十日內，依法提起行政救濟。
 
@@ -108,9 +182,13 @@
 
 > 釋：一、第一項至第三項未修正。二、對於由外國籍之專利權人提出延長專利之申請，現行第四項明定以其所屬國與我國訂有雙邊互惠條約或協定者為限，與貿易有關智慧財產權協定第三條及第四條國民待遇及最惠國待遇之規定意旨不符，爰將現行第四項刪除。
 
-* 52 專利專責機關對於發明專利權延長申請案，應指定審查委員審查，作成審定書送達專利權人或其代理人。專利權人對前項之審定有不服者，得於審定書送達之次日起三十日內，依法提起行政救濟。
+* 52 專利專責機關對於發明專利權延長申請案，應指定專利審查人員審查，作成審定書送達專利權人或其代理人。專利權人對前項之審定有不服者，得於審定書送達之次日起三十日內，依法提起行政救濟。
 
-* 53 追加發明專利權不得單獨申請延長專利權期間。依第七十五條規定視為獨立專利權者，亦同。
+> 釋：第一項文字酌作修正。
+
+* 53 （刪除）
+
+> 釋：一、本條刪除。二、本條為追加專利之相關條文，因現行條文第二十八條追加專利制度之規定刪除，本條配合刪除。
 
 * 54 任何人對於經核准延長發明專利權期間，認有下列情事之一者，得附具證據，向專利專責機關舉發之：一、發明專利之實施無取得許可證之必要者。二、專利權人或被授權人並未取得許可證。三、核准延長之期間超過無法實施之期間。四、延長專利權期間之申請人並非專利權人。五、專利權為共有，而非由共有人全體申請者。六、以取得許可證所承認之外國試驗期間申請延長專利權時，核准期間超過該外國專利主管機關認許者。七、取得許可證所需期間未滿二年者。前項舉發於被延長之專利權消滅後，有可回復之法律上利益者，亦得申請之。專利權延長經舉發成立確定者，原核准延長之期間，視為自始不存在。但因違反第一項第三款、第六款規定，經舉發成立確定者，就其超過之期間，視為未延長。
 
@@ -126,15 +204,21 @@
 
 * 58 混合兩種以上醫藥品而製造之醫藥品或方法，其專利權效力不及於醫師之處方或依處方調劑之醫藥品。
 
-* 59 發明專利權人以其發明專利權讓與他人或授權他人實施，非經向專利專責機關登記，不得對抗第三人。
+* 59 發明專利權人以其發明專利權讓與、信託或授權他人實施，非經向專利專責機關登記，不得對抗第三人。
+
+> 釋：配合信託法之制定，增訂發明專利信託登記之效力。
 
 * 60 發明專利權之讓與或授權，契約約定有下列情事之一致生不公平競爭者，其約定無效：一、禁止或限制受讓人使用某項物品或非出讓人、授權人所供給之方法者。二、要求受讓人向出讓人購取未受專利保障之出品或原料者。
 
 * 61 發明專利權為共有時，除共有人自己實施外，非得共有人全體之同意，不得讓與或授權他人實施。但另有約定者，從其約定。
 
-* 62 發明專利權共有人未得共有人全體之同意，不得以其應有部分讓與他人或設定質權。
+* 62 發明專利權共有人未得共有人全體同意，不得以其應有部分讓與、信託他人或設定質權。
 
-* 63 發明專利權之讓與，應由各當事人署名，附具契約，向專利專責機關申請換發證書。專利專責機關核准前項讓與後，應將讓與事項登記於專利權簿。
+> 釋：信託之移轉專利權亦屬處分行為，在專利權為共有時，應得全體共有人之同意。
+
+* 63 發明專利權之讓與或信託，應由各當事人署名，附具證明文件，向專利專責機關申請換發證書。
+
+> 釋：一、配合信託法之制定，增訂信託登記之手續。因信託發生原因不限於契約，亦可因繼承或法院判決而發生，爰作文字修正，以期週延。二、第二項刪除。按專利權簿應記載之事項，現行條文第七十七條已有明文，無庸重複規定，爰予刪除。
 
 * 64 發明專利權之質權設定、變更或消滅，應由各當事人署名，附具證明文件，向專利專責機關申請登記；未經登記者，不得對抗第三人。
 
@@ -148,19 +232,29 @@
 
 * 69 發明專利權人未得被授權人或質權人之承諾，不得為拋棄專利權或為前二條之申請。
 
-* 70 有下列情事之一者，發明專利權當然消滅：一、專利權期滿時，自期滿之次日消滅。二、專利權人死亡，無人主張其為繼承人者，專利權於依民法第一千一百八十五條規定歸屬國庫之日起消滅。三、專利年費逾補繳期而仍不繳費時，專利權自原繳費期限屆滿之次日消滅。但依第十八條第二項規定回復原狀者，不在此限。四、專利權人拋棄時，自其書面表示之日消滅。
+* 70 有下列情事之一者，發明專利權當然消滅：一、專利權期滿時，自期滿之次日消滅。二、專利權人死亡，無人主張其為繼承人者，專利權於依民法第一千一百八十五條規定歸屬國庫之日起消滅。三、專利年費未於補繳期限屆滿前繳納者，自原繳費期限屆滿之次日消滅。但依第十八條第二項規定回復原狀者，不在此限。四、專利權人拋棄時，自其書面表示之日消滅。第一年專利年費及證書費，未於補繳期限屆滿前繳納者，其專利權自始不存在。
+
+> 釋：一、第一項第三款酌作文字修正。實務上有專利權人逾專利年費補繳期限，經通知專利權消滅後，始補繳年費，並主張無不繳費之情事，爰修正「專利年費未於補繳期限屆滿前繳納者」，以杜爭議。二、增訂第二項。本法對第一年專利年費及證書費逾期未繳納之法律效果並未明定，以致實務上滋生爭議，爰予明定，以杜紛爭。
 
 * 71 有下列情事之一者，專利專責機關應依職權撤銷其發明專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第十九條至第二十一條或第二十七條規定者。二、發明專利權人為非發明專利申請權人者。三、說明書或圖式不載明實施必要之事項，或記載不必要之事項，使實施為不可能或困難者。四、說明書之記載非發明之真實方法者。
 
-* 72 前條第二款之舉發，限於有專利申請權人。其他各款，任何人得附具證據，向專利專責機關舉發之。異議案及前項舉發案，經審查不成立確定者，任何人不得以同一事實及同一證據，再為舉發。利害關係人對於專利權之撤銷有可回復之法律上利益者，得於專利權期滿或當然消滅後提起舉發。舉發人補提理由及證據，應自舉發之日起一個月內為之。
+* 72 前條第二款之舉發，限於有專利申請權人。其他各款，任何人得附具證據，向專利專責機關舉發之。異議案及前項舉發案，經審查不成立者，任何人不得以同一事實及同一證據，再為舉發。利害關係人對於專利權之撤銷有可回復之法律上利益者，得於專利權期滿或當然消滅後提起舉發。舉發人補提理由及證據，應自舉發之日起一個月內為之。
 
-* 73 第五十四條及前條舉發案之處理，準用第四十二條至第四十四條規定。
+> 釋：第二項刪除「確定」二字，以期專利舉發爭訟及早確定。
+
+* 73 第五十四條及前條舉發案之處理，準用第四十二條至第四十四條之一規定。
+
+> 釋：因本次修正已將現行條文第四十四條修正為第四十四條及第四十四條之一，各該條於舉發均有準用，爰於第四十四條下增列「之一」。
 
 * 74 發明專利權經撤銷後，有下列情形之一者，即為撤銷確定：一、未依法提起行政救濟者。二、經提起行政救濟經駁回確定者。發明專利權經撤銷確定者，專利權之效力，視為自始即不存在。
 
-* 75 發明專利權撤銷，其追加專利未撤銷者，視為獨立之專利權，另給證書，至原專利權期滿時為止。
+* 75 （刪除）
 
-* 76 發明專利權之核准、變更、延長、延展、讓與、授權實施、特許實施、撤銷、消滅、設定質權及其他應公告事項，專利專責機關應刊載專利公報。
+> 釋：一、本條刪除。二、對發明人而言，追加專利制度之裨益不大，且兩制併行，作業繁雜，易生混淆，爰配合國內優先權之導入，並參酌日本等國專利法規定，將追加專利相關之條文予以刪除。
+
+* 76 發明專利權之核准，變更、延長、延展、讓與、信託、授權實施、特許實施、撤銷、消滅、設定質權及其他應公告事項，專利專責機關應刊載專利公報。
+
+> 釋：配合信託法之制定，明定信託亦應刊登專利公報。
 
 * 77 專利專責機關應備置專利權簿，記載核准專利發明之名稱、專利期限、專利權人、代理人姓名、住址及其他有關專利之權利與法令所定之一切事項。前項專利權簿，應供人民閱覽、抄錄、攝影或影印。
 
@@ -182,7 +276,9 @@
 
 > 釋：現行規定專利物品或其包裝上未附加標示者，專利權人即不得請求損害賠償，對專利權人之保護有欠周延，爰增訂但書。
 
-* 83 發明專利權人或其被授權人或特許實施權人登載廣告，不得逾越專利權之範圍。非專利物品或非專利方法所製物品，不得在物品或其包裝上附加請准專利字樣，或足以使人誤認為請准專利之標示。
+* 83 發明專利權人或其被授權人或特許實施權人登載廣告，不得逾越專利權之範圍。非專利物品或非專利方法所製物品，不得在廣告、刊物、物品或其包裝上附加請准專利字樣，或足以使人誤認為請准專利之標示。
+
+> 釋：在廣告、刊物上為請准專利之標示或足以使人誤認為請准專利之標示者，其行為與在物品或包裝上標示並無二致，爰於第二項增列，以資周延。
 
 * 84 關於發明專利之各項申請，申請人於申請時，應繳納申請費。核准專利者，發明專利權人應繳納證書費及專利年費；請准延長、延展專利者，在延長、延展期內，仍應繳納專利年費。申請費、證書費及專利年費之金額，由經濟部定之。
 
@@ -208,7 +304,9 @@
 
 > 釋：一、本條新增。二、參照七十四年十一月二十九日公布之商標法第六十六條之二規定，法院得設處理專利案件之專業法庭，以利訴訟之進行。
 
-* 89 依前條請求損害賠償時，得就下列各款擇一計算其損害：一、依民法第二百十六條之規定。但不能提供證據方法以證明其損害時，發明專利權人得就其實施專利權通常所可獲得之利益，減除受害後實施同一專利權所得之利益，以其差額為所受損害。二、依侵害人因侵害行為所得之利益。於侵害人不能就其成本或必要費用舉證時，以銷售該項物品全部收入為所得利益。三、法院囑託專利專責機關或專家代為估計之數額。除前項規定外，發明專利權人之業務上信譽，因侵害而致減損時，得另請求賠償相當金額。依前二項規定，侵害行為如屬故意，法院得依侵害情節，酌定損害額以上之賠償。但不得超過損害額之二倍。
+* 89 依前條請求損害賠償時，得就下列各款擇一計算其損害：一、依民法第二百十六條之規定。但不能提供證據方法以證明其損害時，發明專利權人得就其實施專利權通常所可獲得之利益，減除受害後實施同一專利權所得之利益，以其差額為所受損害。二、依侵害人因侵害行為所得之利益。於侵害人不能就其成本或必要費用舉證時，以銷售該項物品全部收入為所得利益。三、法院囑託專利專責機關或專家代為估計之數額。除前項規定外，發明專利權人之業務上信譽，因侵害而致減損時，得另請求賠償相當金額。依前二項規定，侵害行為如屬故意，法院得依侵害情節，酌定損害額以上之賠償。但不得超過損害額之三倍。
+
+> 釋：配合發明專利除罪化，並提高專利侵權之民事損害賠償，爰將懲罰性之損害賠償額上限，由損害賠償之「二」倍，提高為「三」倍。
 
 * 90 用作侵害他人發明專利權行為之物，或由其行為所生之物，得以被侵害人之請求施行假扣押，於判決賠償後，作為賠償金之全部或一部。當事人為前條起訴及聲請本條假扣押時，法院應依民事訴訟法之規定，准予訴訟救助。
 
@@ -228,7 +326,13 @@
 
 * 97 稱新型者，謂對物品之形狀、構造或裝置之創作或改良。
 
-* 98 凡可供產業上利用之新型，無下列情事之一者，得依本法申請取得新型專利：一、申請前已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請新型專利者，不在此限。二、有相同之發明或新型申請在先並經核准專利者。三、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。新型係運用申請前既有之技術或知識，而為熟習該項技術者所能輕易完成且未能增進功效時，雖無前項所列情事，仍不得依本法申請取得新型專利。
+* 98 凡可供產業上利用之新型，無下列情事之一者，得依本法申請取得新型專利：一、申請前已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請新型專利者，不在此限。二、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。新型係運用申請前既有之技術或知識，而為熟習該項技術者所能輕易完成且未能增進功效時，雖無前項所列情事，仍不得依本法申請取得新型專利。申請人主張第一項第一款但書或第二款但書之情事者，應於申請時敘明事實及其年、月、日，並應於專利專責機關指定期間內檢附證明文件。
+
+> 釋：一、現行條文第一項第二款修正後移列修正條文第九十八條之一。二、現行條文第一項第三款移列為第一項第二款。三、增訂第三項。
+
+* 98.1 申請專利之新型，與申請在先而在其申請後始公開或公告之發明或新型專利申請案所附說明書或圖式載明之內容相同者，不得取得新型專利。但其申請人與申請在先之發明或新型專利申請案之申請人相同者，不在此限。
+
+> 釋：一、本條新增。二、規定先申請案之地位。另配合本次修正發明專利採行早期公開制度，將現行條文第九十八條第一項第二款條文中「經核准專利者」之規定修正為「公開或公告」。
 
 * 99 下列物品不予新型專利：一、妨害公共秩序、善良風俗或衛生者。二、相同或近似於黨旗、國旗、軍旗、國徽、勳章之形狀者。
 
@@ -238,6 +342,10 @@
 
 * 102 公告中之新型，任何人認有違反第四條、第一百零五條準用第二十二條第三項或第四項、第二十七條或第九十七條至第九十九條規定，或利害關係人認有不合第五條或第一百零五條準用第三十條規定者，得自公告之日起三個月內，備具異議書，附具證明文件，向專利專責機關提起異議。異議人補提理由及證據，應自異議之日起一個月內為之。
 
+* 102.1 專利專責機關於審查新型專利時，得依職權或依申請通知申請人或異議人限期為下列各款之行為：一、至專利專責機關面詢。二、為必要之實驗、補送模型或樣品。三、補充或修正說明書或圖式。前項第二款之實驗或補送模型或樣品，專利專責機關必要時得至現場或指定地點實施勘驗。依第一項第三款所為之補充或修正，不得變更申請案之實質。於審定公告後提出之補充、修正，並須有下列各款情事之一始得為之：一、申請專利範圍過廣。二、誤記之事項。三、不明瞭之記載。
+
+> 釋：一、本條新增。二、新型專利之補充、修正原係透過現行條文第一百零五條準用第四十四條發明專利之規定，本次修正發明採早期公開制，業修正現行條文第四十四條並增訂第四十四條之一，新型在性質上無從準用，爰增訂本條，俾作為新型專利補充、修正依據。
+
 * 103 新型專利權人，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該新型專利物品之權。新型專利權範圍，以說明書所載之申請專利範圍為準。必要時，得審酌說明書及圖式。
 
 * 104 有下列情事之一者，專利專責機關應依職權撤銷其新型專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第一百零五條準用第二十七條或第九十七條至第九十九條規定者。二、新型專利權人為非新型專利申請權人者。三、說明書或圖式，不載明實施必要之事項，或記載不必要之事項，使實施為不可能或困難者。
@@ -246,9 +354,21 @@
 
 > 釋：本條酌作文字修正。因專利法第五十六條第四項有關發明專利進口權部分之規定不符國民待遇及最惠國待遇原則，而將之刪除，新型專利之準用規定自應配合修正，爰於新型專利準用條文中將第五十六條第四項刪除。
 
-* 106 稱新式樣者，謂對物品之形狀、花紋、色彩或其結合之創作。稱聯合新式樣者，謂同一人因襲其另一新式樣之創作且構成近似者。
+* 105.1 第二十五條之一規定，於新型專利準用之。新型專利舉發之處理，準用第四十二條、第四十三條及第一百零二條之一規定。第三十六條之一至第三十六條之六、第四十四條、第四十四條之一及第七十三條規定於新型專利不準用之。
 
-* 107 凡新式樣，無下列情事之一者，得依本法申請取得新式樣專利：一、申請前有相同或近似之新式樣，已見於刊物或已公開使用者。二、有相同或近似之新式樣，申請在先並經核准專利者。新式樣係熟習該項技術者易於思及之創作者，雖無前項所列情事，仍不得依本法申請取得新式樣專利。近似之新式樣屬同一人者，得申請為聯合新式樣專利，不受前二項之限制。同一人不得就與聯合新式樣近似之新式樣申請為聯合新式樣專利。
+> 釋：一、本條新增。二、配合加入ＷＴＯ之八十六年五月七日專利法部分條文修正案中，第一百零五條業修正在案，惟迄未執行，若該修正案於本案完成立法程序戈時，仍未施行，則日後該修正案之修正條文指定施日期時，將形成後法優於前法，優先適用該條，因此新型準用發明條文有所增刪時，不宜訂於現行條文第一百零五條，以免被該條後來居上而不能適用。故有必要另增訂本條。
+
+* 106 稱新式樣者，謂對物品之形狀、花紋、色彩或其結合，透過視覺訴求之創作。稱聯合新式樣者，謂同一人因襲其原新式樣之創作且構成近似者。
+
+> 釋：一、修正第一項。按新式樣專利與發明、新型專利之主要區隔，在於新式樣專利著重於新式樣專利著重於視覺效果之增進強化，故明定創作須透過視覺訴求始受本法保護。二、第二項文字酌作修正。聯合新式樣乃同一人因襲原有新式樣之創作且構成近似者，爰將現行條文之「另一」修正為「原」。
+
+* 107 凡可供產業上利用之新式樣，無下列情事之一者，得依本法申請取得新式樣專利：一、申請前有相同或近似之新式樣，已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。新式樣係熟習該項技藝者易於思及之創作者，雖無前項所列情事，仍不得依本法申請取得新式樣專利。同一人以近似之新式樣申請專利時，應申請為聯合新式樣專利，不受前二項限制。但於原新式樣申請前有與聯合新式樣相同或近似之新式樣已見於刊物、公開使用或陳列於展覽會者，仍不得依本法申請取得聯合新式樣專利。同一人不得就與聯合新式樣近似之新式樣申請為聯合新式樣專利。申請人主張第一項第一款但書或第二款但書之情事者，應於申請時敘明事實及其年、月、日，並應於專利專責機關指定期間內檢附證明文件。
+
+> 釋：一、修正第一項。聯合新式樣乃原新式樣申請專利範圍之確認。原新樣申請後，聯合新式樣申請前，有他人近似新式樣出現，該聯合新式樣不受影響，仍可准專利。二、第二項文字酌作修正，將「技術」修正為「技藝」。三、修正第三項。增訂但書以避免實務困擾。四、增訂第五項。
+
+* 107.1 申請專利之新式樣，與申請在先而在其申請後始公告之新式樣專利申請案所附圖說之內容相同或近似者，不得取得新式樣專利。但其申請人與申請在先之新式樣專利申請案之申請人相同者，不在此限。
+
+> 釋：一、本條新增。二、就後案申請前已有他人申請在先尚未公告之相同專利內容，為貫徹先申請主義之精神，乃擬制其屬新穎性審查範圍，明定後申請案不可申請取得新式樣專利。
 
 * 108 下列各款不予新式樣專利：一、純功能性設計之物品造形。二、純藝術創作或美術工藝品。三、積體電路電路佈局及電子電路佈局。四、物品妨害公共秩序、善良風俗或衛生者。五、物品相同或近似於黨旗、國旗、國父遺像、國徽、軍旗、印信、勳章者。
 
@@ -260,41 +380,77 @@
 
 * 111 申請獨立新式樣專利後改請聯合新式樣專利者，或申請聯合新式樣專利後改請獨立新式樣專利者，以原申請案之申請日為改請案之申請日。但在原申請案審定書送達之次日起三十日後改請者，以改請之日為改請案之申請日。
 
-* 112 申請新式樣專利，由專利申請權人備具申請書、圖說及宣誓書，向專利專責機關申請之。圖說應載明申請專利範圍。申請權人為雇用人、受讓人或繼承人申請時，應敘明創作人姓名，並附具僱傭、受讓或繼承證明文件。
+* 112 申請新式樣專利，由專利申請權人備具申請書、圖說及宣誓書，向專利專責機關申請之。圖說應載明申請專利範圍。申請權人為僱用人、受讓人或繼承人申請時，應敘明創作人姓名，並附具僱傭、受讓或繼承證明文件。第一項圖說，除應載明申請專利範圍外，並應敘明物品之用途及新式樣物品創作特點，使熟習該項技藝者能瞭解其內容並可據以實施。
 
-* 113 申請新式樣專利以規費繳納及前條所規定之文件齊備之日為申請日，其圖說、宣誓書以外文本提出者，應於專利專責機關指定期間內補正中文本；在處分前補正者，以補正之日為文件齊備日。
+> 釋：一、第二項文字酌作修正。二、增訂第三項。當第一項之圖說所載圖面，不足以揭示新式樣專利申請標的時，有必要於圖說創作說明中，以文補充敘述物品用途及創作特點，使熟習該項技藝者能瞭解其內容，並可據以實施，且有助於新式樣物品分類及前檢索，爰將施行細則第四十七條第一項第五款規定修正後移列於本條。
 
-* 114 以新式樣申請專利，應指定所施予新式樣之物品，並敘明其類別。前項物品之分類，由經濟部定之。
+* 113 申請新式樣專利以規費繳納及前條第一項所規定之申請書、圖說齊備之日為申請日。其圖說以外文本提出者，應於專利專責機關指定期間內補正中文本；在處分前補正者，以補正之日為文件齊備日。
 
-* 115 公告中之新式樣，任何人認有違反第四條、第一百二十二條準用第二十二條第三項或第四項、第二十七條或第一百零六條、第一百零八條規定，或利害關係人認有不合第五條規定者，得自公告之日起三個月內備具異議書，附具證明文件，向專利專責機關提起異議。異議人補提理由及證據，應自異議之日起一個月內為之。
+> 釋：參照修正條文第二十三條之修正，改為「前條第一項所規定之申請書、圖說」，以排除宣誓書及申請權證明文件為取得申請日之必要文件。
 
-* 116 專利專責機關於審查時，得依職權或依申請限期通知申請人或異議人為下列各款之行為：一、到局面詢。二、補充或修正圖說。三、補送模型或樣品。依前項第二款所為之補充或修正，係在新式樣專利案審定公告之後提出者，以誤記事項為限。
+* 114 以新式樣申請專利，應指定所施予新式樣之物品。
+
+> 釋：一、為配合國際化潮流，以及即將採取之「國際工業設計物品分類表」，新式樣之物品類別，宜由專利專責機關本乎職權指定之，爰將第一項之「並敘明其類別」刪除，加以鬆綁。二、刪除現行條文第二項。按物品分類之訂定，宜由專利專責機關依職權訂定，爰將本項刪除。
+
+* 115 公告中之新式樣，任何人認有違反第四條、第一百零六條至第一百零八條、第一百十二條第三項或第一百二十二條準用第二十七條之規定，或利害關係人認有不合第五條規定者，得自公告之日起三個月內備具異議書，附具證明文件，向專利專責機關提起異議。異議人補提理由及證據，應自異議之日起一個月內為之。
+
+> 釋：第一項文字酌作修正。現行條文第二十二條第三項、第四項之規定，於新式樣並不準用，本次修正已單獨訂定為修正條文第一百十二條第三項，爰配合修正之。
+
+* 116 專利專責機關於審查新式樣專利時，得依職權或依申請通知申請人或異議人限期為下列各款之行為：一、至專利專責機關面詢。二、補送模型或樣品。三、補充、修正圖說。前項第二款之補送模型或樣品，專利專責機關必要時得至現場或指定地點實施勘驗。依第一項第三款所為之補充、修正，不得變更申請案之實質。於審定公告後提出之補充、修正，並須有下列各款情事之一始得為之：一、誤記之事項。二、不明瞭之記載。
+
+> 釋：一、第一項酌作修正。二、增訂第二項。新式樣模型、樣品如體積過於龐大或不適合運送，有至現場勘驗之必要，予以明定。三、增訂第三項。明定補充、修正，不得變更申請案之實質；並規定其原因以誤記之事項或不明瞭之記載為限。
 
 * 117 新式樣專利權人就其指定新式樣所施予之物品，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該新式樣及近似新式樣專利物品之權。新式樣專利權範圍，以圖說所載之申請專利範圍為準；必要時，得審酌創作說明。
 
 > 釋：一、第一項增訂「及近似新式樣」，俾使新式樣專利權之範圍明確。二、第二項未修正。
 
-* 118 新式樣專利權之效力不及於下列各款情事：一、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其新式樣，並經專利申請人聲明保留其專利權者，不在此限。二、申請前已存在國內之物品。三、專利權人所製造或經專利權人同意製造之專利物品販賣後，使用或再販賣該物品者。上述製造、販賣不以國內為限。前項第一款之使用人，限於在其原有事業內繼續利用；第三款得為販賣之區域，由法院依事實認定之。
+* 117.1 聯合新式樣專利權從屬於原新式樣專利權，不得單獨主張，且不及於近似之範圍。原新式樣專利權撤銷或消滅者，聯合新式樣專利權應一併撤銷或消滅。
 
-* 119 新式樣專利權人得就所指定施予之物品，以其新式樣專利權讓與他人或授權他人實施，非經向專利專責機關登記，不得對抗第三人。但聯合新式樣專利權不得單獨讓與或授權。
+> 釋：一、本條新增。二、按聯合新式樣乃原新式樣申請專利範圍之確認，爰於第一項明定聯合新式樣專利權之範圍。三、當原新式樣專利權消滅時，依中央法規標準法第五條第二款規定，應以法律定之，爰予移列為第二項。
 
-* 120 專利權人對於請准新式樣專利之圖說，有誤記之事項時得向專利專責機關申請更正。前項更正，專利專責機關於核准後，應將其事由刊載專利公報。
+* 118 新式樣專利權之效力不及於下列各款情事：一、為研究、教學或試驗實施其新式樣，而無營利行為者。二、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其新式樣，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，經專利權人舉發而撤銷時，其被授權人在舉發前善意在國內使用或已完成必須之準備者。六、專利權人所製造或經其同意製造之專利物品販賣後，使用或再販賣該物品者。上述製造、販賣不以國內為限。前項第二款及第五款之使用人，限於在其原有事業內繼續利用；第六款得為販賣之區域，由法院依事實認定之。
 
-* 121 有下列情事之一者，專利專責機關應依職權撤銷其新式樣專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第一百二十二條準用第二十七條規定者。二、違反第一百零六條至第一百零八條規定者。三、新式樣專利權人為非新式樣專利申請權人者。
+> 釋：一、按本條乃新式樣專利權效力所不及之規定。非專利申請權人所得專利權，以專利權人舉發而撤銷時，其被授權人在舉發前以善意在國內使用或已完成必須之準備者等情事，於新式樣專利權亦應作相同規範，爰參照增訂之。二、第二項文字酌作修正。
+
+* 118.1 前條第一項第五款之被授權人，因該專利權經舉發而撤銷之後仍實施時，於收到專利權人書面通知之日起，應支付專利權人合理之權利金。
+
+> 釋：新式樣專利權效力所不及之規定，已於修正條文第一百十八條有所規範，則為配合加入ＷＴＯ八十六年五月七日之修正條文第五十七條第三項所訂情事於新式樣專利亦須作相同規範，爰增訂本條。
+
+* 119 新式樣專利權人得就所指定施予之物品，以其新式樣專利權讓與、信託或授權他人實施，非經向專利專責機關登記，不得對抗第三人。但聯合新式樣專利權不得單獨讓與、信託或授權。
+
+> 釋：配合信託法制定，明定新式樣信託登記之效力，因信託之外部行為與讓與相類，爰於但書增列聯合新式樣亦不可單獨信託。
+
+* 120 新式樣專利權人對於請准專利之圖說，認有誤記或不明瞭之事項，得向專利專責機關申請更正。前項更正，專利專責機關於核准後，應將其事由刊載專利公報。
+
+> 釋：第一項文字酌作修正。增列「或不明瞭」四字。
+
+* 121 有下列情事之一者，專利專責機關應依職權撤銷其新式樣專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第一百零六條至第一百零八條或第一百二十二條準用第二十七條規定者。二、新式樣專利權人為非新式樣專利申請權人者。
+
+> 釋：參照現行條文第七十一條規定，將第一款、第二款修正後，合併為第一款；第三款移列第二款。
 
 * 122 第二十四條、第二十五條、第二十七條、第三十一條前段、第三十二條、第三十四條至第四十條、第四十二條、第四十三條、第四十五條至第四十七條、第四十九條、第六十條至第六十五條、第六十八條至第七十條、第七十二條至第七十四條、第七十六條、第七十七條、第八十二條至第九十條、第九十二條至第九十六條規定，於新式樣專利準用之。第二十四條第一項所定期間，於新式樣專利案為六個月。
 
 > 釋：一、第一項酌作文字修正。因專利法第五十六條第四項有關發明專利進口權部分之規定不符國民待遇及最惠國待遇原則，而將之刪除，新式樣專利之準用規定自應配合修正，爰於新式樣專利準用條文中將第五十六條第四項刪除。二、第二項未修正。
 
-* 123 未經物品發明專利權人同意製造該物品，致侵害其專利權者，科新臺幣六十萬元以下罰金。
+* 122.1 新式樣專利舉發之處理，準用第四十二條、第四十三條及第一百十六條規定。第三十六條之一至第三十六條之六及第七十三條規定，於新式樣專利不準用之。
 
-* 124 未經方法發明專利權人同意使用該方法，致侵害其專利權者，科新臺幣三十萬元以下罰金。
+> 釋：一、本條新增。二、查配合加入ＷＴＯ之八十六年五月七日專利法部分條文修正案中，第一百二十二條業修正案，惟迄未施行，若該修正案於本案完成立法施行時，仍未施行，則日後該修正案指定施行日期時，將形成後法優於前法，優先適用該條，因此新式樣準用發明條文有所增刪時，不宜訂於第一百二十二條，以免被該條後來居上而不能適用。爰增訂之。
+
+* 123 （刪除）
+
+> 釋：一、本條刪除。二、現行條文所定刑罰，雖只有罰金刑，惟實務運作上常見權利人透過檢察官發動偵查權，對嫌疑人或被告進行搜索、扣押，最後縱經火起訴處分或判決無罪確定，惟對嫌疑人或被告名譽及財產權之損害已然造成，對於產業展反而不利。爰將本條刪除。
+
+* 124 （刪除）
+
+> 釋：一、本條刪除。二、現行條文所定刑罰，雖只有罰金刑，惟實務運作上常見權利人透過檢察官發動偵查權，對嫌疑人或被告進行搜索、扣押，最後縱經火起訴處分或判決無罪確定，惟對嫌疑人或被告名譽及財產權之損害已然造成，對於產業展反而不利。爰將本條刪除。
 
 * 125 未經新型專利權人同意製造該物品，致侵害其專利權者，處二年以下有期徒刑、拘役或科或併科新臺幣十五萬元以下罰金。
 
 * 126 未經新式樣專利權人同意製造該物品，致侵害其專利權者，處一年以下有期徒刑、拘役或科或併科新臺幣六萬元以下罰金。
 
-* 127 明知為未經發明專利權人同意所製造之物品而販賣，或意圖販賣而陳列，或意圖販賣而自國外進口者，科新臺幣六萬元以下罰金。
+* 127 （刪除）
+
+> 釋：一、本條刪除。二、現行條文所定刑罰，雖只有罰金刑，惟實務運作上常見權利人透過檢察官發動偵查權，對嫌疑人或被告進行搜索、扣押，最後縱經火起訴處分或判決無罪確定，惟對嫌疑人或被告名譽及財產權之損害已然造成，對於產業展反而不利。爰將本條刪除。
 
 * 128 明知為未經新型專利權人同意所製造之物品而販賣，或意圖販賣而陳列或意圖販賣而自國外進口者，處六月以下有期徒刑、拘役或科或併科新臺幣三萬元以下罰金。
 
@@ -302,13 +458,23 @@
 
 * 130 違反第八十三條規定者，處六月以下有期徒刑、拘役或科或併科新臺幣五萬元以下罰金。
 
-* 131 本章之罪，除第一百三十條外，須告訴乃論。專利權人就第一百二十三條至第一百二十六條提出告訴，應檢附侵害鑑定報告與侵害人經專利權人請求排除侵害之書面通知。未提出前項文件者，其告訴不合法。司法院與行政院應協調指定侵害鑑定專業機構。
+* 131 本章之罪，除第一百三十條外，須告訴乃論。專利權人就第一百二十五條、第一百二十六條提出告訴，應檢附主張專利權受侵害之比對分析報告。法官、檢察官、司法警察官有相當理由認有實施搜索、扣押必要者，應注意被告或犯罪嫌疑人之名譽及財產權，依比例原則以適當方法為之。
 
-* 132 專利檔案應由專利專責機關永久保存，惟得以微縮底片、磁碟、磁帶、光碟等方式儲存。前項儲存之紀錄，經專利專責機關確認者，視同原檔案，原紙本專利檔案得予銷燬。儲存紀錄之複製品經專利專責機關確認者，推定其為真正。第一項儲存替代物之確認、管理及使用規則，由經濟部定之。
+> 釋：一、第一項未修正。二、配合現行條文第一百二十三條、第一百二十四條之刪除，將提出告訴之休文由「第一百二三條至第一百二十六條」修正為「第一百二十五條、第一百二十六條」。又因專利侵權訴訟涉及申請專利範圍之解釋及專業技術之比對判斷，為輔助司法機關便於瞭解系爭專利與涉嫌仿冒品之關係，並使涉嫌人知所防禦，爰明定專利權人提出前揭告訴時，應檢附主張專利權受侵害之比對分析報告。三、修正第三項。
+
+* 131.1 司法院與行政院應協調指定侵害鑑定專業機構。法院或檢察官受理專利訴訟案件，得囑託前項機構為鑑定。
+
+> 釋：一、本條新增。二、第一項由現行條文第一百三十一第四項移列。三、因專利侵權訴訟涉及各種特別知識經驗，法院或檢察官常有選任鑑定人或囑託相關機關（構）鑑定之必要，第一項規定司法院與行政院應協調指定侵害鑑定專業機構，係為便於法院或檢察官專利訴訟時可迅速覓得較具公信力之專業機構協助鑑定，爰增訂第二項。
+
+* 132 專利檔案中之申請書件、說明書及圖式，應由專利專責機關永久保存；其他文件之檔案，至少應保存三十年。前項專利檔案，得以微縮底片、磁碟、磁帶、光碟等方式儲存；儲存紀錄經專利專責機關確認者，視同原檔案，原紙本專利檔案得予銷燬；儲存紀錄之複製品經專利專責機關確認者，推定其為真正。前項儲存替代物之確認、管理及使用規則，由經濟部定之。
+
+> 釋：一、第一項酌作修正。按專利申請書件、說明書及圖式等，係前案技術之原始資料，必須永久保存；其休專利檔案，因顧及實務上儲存空間不足，且專利權期間最長為二十五年，乃規定應保存三十年，以符所需。二、現行條文第一項後段與第二項均為非紙本檔案儲存之規定，爰併列為第二項。三、第三項文字修正，將「第一項」修正為「前項」。
 
 * 133 本法施行細則，由經濟部定之。
 
-* 134 本法修正施行前，未審定之專利案，其以後之程序，依修正後之規定辦理。本法修正施行前，已審定公告之專利案，其專利權期間之計算，依修正前之規定辦理。
+* 134 本法修正施行前，未審定之專利案，其以後之程序，依修正施行後之規定辦理。本法中華民國八十三年一月二十一日修正施行前，已審定公告之專利案，其專利權期間之計算，依修正施行前之規定辦理。但發明專利案，於世界貿易組織協定在中華民國管轄區域內生效之日，專利權仍存續者，其專利權期限，依修正施行後之規定辦理。新式樣專利案，於世界貿易組織協定在中華民國管轄區域內生效之日，專利權仍存續者，其專利權期限，依本法中華民國八十六年五月七日修正施行後之規定辦理。
+
+> 釋：一、第一項酌作文字修正。二、因現行條文第二項係八十三年一月二十一日修正時所增訂，為免與本次修正混淆，爰於第二項前段增訂「中華民國八十三年一月二十一日」等文字。另為符合ＷＴＯ
 
 * 135 本法修正施行前所提出之申請案，均不得依第五十一條規定，申請延長專利權期間。
 
