中華民國刑法 2001.10.25

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -278,7 +278,9 @@
 
 * 130 公務員廢弛職務釀成災害者，處三年以上、十年以下有期徒刑。
 
-* 131 公務員對於主管或監督之事務，直接或間接圖利者，處一年以上、七年以下有期徒刑，得併科七千元以下罰金。犯前項之罪者，所得之利益沒收之；如全部或一部不能沒收時，追徵其價額。
+* 131 公務員對於主管或監督之事務，明知違背法令，直接或間接圖自己或其他私人不法利益，因而獲得利益者，處一年以上七年以下有期徒刑，得併科七萬元以下罰金。犯前項之罪者，所得之利益沒收之。如全部或一部不能沒收時，追徵其價額。
+
+> 釋：一、第一項除修正罰金額外，並修正為結果犯，其構成要件更加具體明確，俾公務員易於瞭解遵循，避免對「便民」與「圖利他人」發生混淆，而影響行政效率。二、所需「違背法令」，該「法令」係指包括法律、法律授權之法規命令、職權命令、自治條例、自治規則、委辦規則等，對多數不特定人民就一般事項所作對外發生法律效果之規定。因此，實務上對「違背法令」與「不法利益」之「不法」內涵所作之判斷不完全一致，二者即仍有併存之必要，以免日後適用上產生窒礙。
 
 * 132 公務員洩漏或交付關於中華民國國防以外應秘密之文書、圖畫、消息或物品者，處三年以下有期徒刑。因過失犯前項之罪者，處一年以下有期徒刑、拘役或三百元以下罰金。非公務員因職務或業務知悉或持有第一項之文書、圖畫、消息或物品，而洩漏或交付之者，處一年以下有期徒刑、拘役或三百元以下罰金。
 
