--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -1,6 +1,8 @@
 * 1 為保障著作人著作權益，調和社會公共利益，促進國家文化發展，特制定本法。本法未規定者，適用其他法律之規定。
 
-* 2 本法所稱主管機關為內政部。
+* 2 本法主管機關為經濟部。前項業務，由經濟部設專責機關辦理。
+
+> 釋：「經濟部智慧財產局組織條例」第二條規定，有關著作權之相關業務為其職掌，經濟部智慧財產局業於八十八年一月二十六日成立，原內政部主管之著作權相關業務已移撥該局主政，爰參考專利法第三條修正之。
 
 * 3 本法用詞定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法有形之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作用容。七、公開播送：指基於公眾接收訊息為目的，以有線電、無線電或其他器材，藉聲音或影像向公眾傳達著作內容。由原播送人以外之人，以有線電或無線電將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十一、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十二、發行：指權利人散布能滿足公眾合理需要之重製物。十三、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十四、原件：指著作首次附著之物。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
 
@@ -70,13 +72,17 @@
 
 * 33 法人為著作人之著作，其著作財產權存續至其著作公開發表後五十年。但著作在創作完成時起算五十年內未公開發表者，其著作財產權存續至創作完成時起五十年。
 
-* 34 攝影、視聽、錄音、電腦程式及表演之著作財產權存續至著作公開發表後五十年。前條但書規定，於前項準用之。
+* 34 攝影、視聽、錄音及表演之著作財產權存續至著作公開發表後五十年。前條但書規定，於前項準用之。
+
+> 釋：原條文第一項規定電腦程式著作之著作財產權期間僅存續至著作公開發表後五十年，爰將「電腦程式」一詞刪除，使電腦程式著作之著作財產權期間回歸適用本法第三十條至第三十三條有關著作人之生存期間及其死亡後五十年之保護期間等一般規定。
 
 * 35 第三十條至第三十四條所定存續期間，以該期間屆滿當年之末日為期間之終止。繼續或逐次公開發表之著作，依公開發表日計算著作財產權存續期間時，如各次公開發表能獨立成一著作者，著作財產權存續期間自各別公開發表日起算。如各次公開發表不能獨立成一著作者，以能獨立成一著作時之公開發表日起算。前項情形，如繼續部分未於前次公開發表日後三年內公開發表者，其著作財產權存續期間自前次公開發表日起算。
 
 * 36 著作財產權得全部或部分讓與他人或與他人共有。著作財產權之受讓人，在其受讓範圍內，取得著作財產權。著作財產權讓與之範圍依當事人之約定；其約定不明之部分，推定為未讓與。
 
-* 37 著作財產權人得授讓他人利用著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。
+* 37 著作財產權人得授權他人利用著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項授權經公證人作成公證書者，不因著作財產權人嗣後將其著作財產權讓與或再為授權而受影響。非專屬授權之被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利。著作財產權人在專屬授權範圍內，不得行使權利。第二項至第四項規定，於本法修正施行前所為之授權，不適用之。音樂著作經授權重製於電腦伴唱機者，利用人利用該電腦伴唱機公開演出該著作，不適用第七章規定。但屬於著作權仲介團體管理之音樂著作，不在此限。
+
+> 釋：一、為避免著作財產權人於授權後因該著作財產權讓與或再為授權致影響先前之授權，增訂第二項。原第二項移列為第三項。二、增訂第四項，明定專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利，而著作財產權人在該範圍內，不得行使權利，以資明確。三、增訂第五項、第六項。
 
 * 38 （刪除）
 
@@ -154,7 +160,9 @@
 
 * 70 依前條規定利用音樂著作者，不得將其錄音著作之重製物銷售至中華民國管轄區域外。
 
-* 71 依第六十九條規定，取得強制授權之許可後，有下列情形之一者，主管機關應撤銷其許可：一、未依主管機關許可之方式利用著作者。二、強制授權許可後，發現其申請有虛偽情事者。
+* 71 依第六十九條規定，取得強制授權之許可後，發現其申請有虛偽情事者，著作權專責機關應撤銷其許可。依第六十九條規定，取得強制授權之許可後，未依著作權專責機關許可之方式利用著作者，著作權專責機關應廢止其許可。
+
+> 釋：就合法行政處分失效，如取得強制授權之許可後，未依著作權專責機關許可之方式利用著作者，使其效力失效之行政處分應以「廢止」處分稱之；就違法之行政處分之失效，如強制授權許可後，發現其申請有虛偽情事者，使其效力失效之行政處分應以「撤銷」稱之，爰予修正。
 
 * 72 （刪除）
 
@@ -174,9 +182,13 @@
 
 * 80 第四十二條及第四十三條有關著作財產權消滅之規定、第四十四條至第四十八條、第四十九條、第五十一條、第五十二條、第五十四條、第六十四條及第六十五條關於著作財產權限制之規定，於製版權準用之。
 
-* 81 著作財產權人為行使權利、收受及分配使用報酬，經主管機關之許可，得組成著作權仲介團體。前項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
+* 81 著作財產權人為行使權利、收受及分配使用報酬，經著作權專責機關之許可，得組成著作權仲介團體。專屬授權之被授權人，亦得加入著作權仲介團體。第一項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
 
-* 82 主管機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定及著作權仲介團體所訂定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者，以告訴乃論之案件為限。
+> 釋：一、將第一項「主管機關」，修正為「著作權專責機關」。二、增訂第二項，專屬授權之被授權人，亦得加入著作權仲介團體。三、原條文第二項，移列為第三項。
+
+* 82 著作權專責機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者，以告訴乃論之案件為限。
+
+> 釋：按著作權既屬私權，回歸民法私法自治及市場機能之精神，藉由仲介團體與利用人雙方自由協商洽談，實屬需要，為避免不必要之誤解，爰刪除使用報酬率應經著作權審議及調解委員會審議之規定。
 
 * 83 前條著作權審議及調解委員會之組織規程及有關爭議之調解辦法，由主管機關擬訂，報請行政院核定後發布之。
 
@@ -200,7 +212,9 @@
 
 * 90 共同著作之各著作權人，對於侵害其著作權者，得各依本章之規定，請求救濟，並得按其應有部分，請求損害賠償。前項規定，於因其他關係成立之共有著作財產權或製版權之共有人準用之。
 
-* 90.1 著作權人或製版權人對輸入或輸出侵害其著作權或製版權之物者，得申請海關先予查扣。前項申請應以書面為之，並釋明侵害之事實，及提供相當於海關核估該進口貨物完稅價格或出口貨物離岸價格之保證金，作為被查扣人因查扣所受損害之賠償擔保。申請人或被查扣人得向海關申請檢視被查扣之物。查扣之物，經申請人取得法院民事確定判決，屬侵害著作權或製版權者，由海關予以沒入。沒入物之貨櫃延滯費、倉租、裝卸費等有關費用暨處理銷燬費用應由被查扣人負擔。前項處堙銷燬所需費用，經海關限期通知繳納而不繳納者，移送法院強制執行。有下列情形之一者，除由海關撤銷查扣依有關進出口貨物通關規定辦理外，申請人並應賠償被查扣人因查扣所受之損害：一、查扣之物經法院確定判決，不屬侵害著作權或製版權之物者。二、海關於通知申請人受理查扣之日起十二日內，未被告知就查扣物為侵害物之訴訟已提起者。三、申請人申請撤銷查扣者。前項第二款規定之期限，海關得視需要延長十二日。有下列情形之一者，海關應依申請人之申請返還保證金：一、申請人取得勝訴之確定判決或與被查扣人達成和解，已無繼續提供保證金之必要者。二、撤銷查扣後，申請人證明已定二十日以上之期間，催告被查扣人行使權利而未行使者。三、被查扣人同意返還者。被查扣人就第二項之保證金，與質權人有同一之權利。
+* 90.1 著作權人或製版權人對輸入或輸出侵害其著作權或製版權之物者，得申請海關先予查扣。前項申請應以書面為之，並釋明侵害之事實，及提供相當於海關核估該進口貨物完稅價格或出口貨物離岸價格之保證金，作為被查扣人因查扣所受損害之賠償擔保。海關受理查扣之申請，應即通知申請人。如認符合前項規定而實施查扣時，應以書面通知申請人及被查扣人。申請人或被查扣人，得向海關申請檢視被查扣之物。查扣之物，經申請人取得法院民事確定判決，屬侵害著作權或製版權者，由海關予以沒入。沒入物之貨櫃延滯費、倉租、裝卸費等有關費用暨處理銷燬費用應由被查扣人負擔。前項處理銷燬所需費用，經海關限期通知繳納而不繳納者，依法移送強制執行。有下列情形之一者，除由海關廢止查扣依有關進出口貨物通關規定辦理外，申請人並應賠償被查扣人因查扣所受之損害：一、查扣之物經法院確定判決，不屬侵害著作權或製版權之物者。二、海關於通知申請人受理查扣之日起十二日內，未被告知就查扣物為侵害物之訴訟已提起者。三、申請人申請廢止查扣者。前項第二款規定之期限，海關得視需要延長十二日。有下列情形之一者，海關應依申請人之申請返還保證金：一、申請人取得勝訴之確定判決或與被查扣人達成和解，已無繼續提供保證金之必要者。二、廢止查扣後，申請人證明已定二十日以上之期間，催告被查扣人行使權利而未行使者。三、被查扣人同意返還者。被查扣人就第二項之保證金，與質權人有同一之權利。
+
+> 釋：一、行政程序法就行政機關使違法或合法之行政處分失其效力，區分性質而異其名稱，為期著作權法之用語與該法所使用概念之用語一致，爰予配合修正。二、現行條文所稱「撤銷查扣」，依其規範內容之性質而論，係指海關基於著作權人或製版權人之申請，對輸入或輸出侵害其著作權或製版權之物予以查扣後，另基於法定事由之產生，而以另一行政處分使原先合法查扣之效力終止，應屬「廢止」之概念，爰將本第六項本文、第三款、第八項第二款之用語，均修正為「廢止」，以期與行政程序法之用語一致。三、第三項新增。海關所為查扣，旨在防止著作權人或製版權人損害之擴大。是申請人申請查扣後，仍須續行訴訟程序，以維自身權益。
 
 * 90.2 前條之實施辦法，由主管機關會同財政部定之。
 
